--- a/djdan/annotations/static/css/base.css
+++ b/djdan/annotations/static/css/base.css
@@ -266,4 +266,6 @@
 	.half-bottom { margin-bottom: 10px !important; }
 	.add-bottom { margin-bottom: 20px !important; }
 
-
+.image img {
+	max-width: 400px;
+}
